# AlgoStudio

./: .coverage  .gitignore  AGENTS.md  README.md  alembic.ini  algo_studio.db  algo_studio.db-shm  coverage.xml  pyproject.toml  requirements-web.txt  requirements.txt
.dvc/: config
datasets/: COCO2017.dvc
docs/: AGENTS写作指南.md  ALGORITHM_DEPLOYMENT.md  QUICK_START.md  USER_MANUAL.md  algorithm_interface_spec.md  cluster-deployment.md
scripts/: README.md  add_worker.sh  cluster_status.sh  join_cluster.sh  redis_sentinel_deploy.py  redis_sentinel_test.sh  sentinel_production_drill.sh  setup_ray_cluster.sh  setup_worker_redis.sh  ssh_deploy.py  test_sentinel_failover.sh  worker_deploy.sh
talks/: README.md  ai-scheduling-engineer-to-coordinator-2026-03-29-001.md  ai-scheduling-engineer-to-coordinator-2026-03-29-003.md  ai-scheduling-to-coordinator-2026-03-26-001.md  ai-scheduling-to-coordinator-2026-03-27-001.md  ai-scheduling-to-coordinator-2026-03-27-002.md  ai-scheduling-to-coordinator-2026-03-27-003.md  ai-scheduling-to-coordinator-2026-03-27-004.md  ai-scheduling-to-coordinator-2026-03-27-feedback.md  ai-scheduling-to-coordinator-round1-2026-03-27.md  ai-scheduling-to-coordinator-round2-2026-03-27.md  ai-scheduling-to-coordinator-round3-2026-03-27.md  ai-scheduling-to-coordinator-round4-2026-03-27-005.md  ai-scheduling-to-coordinator-round6-2026-03-29.md  architect-alpha-to-coordinator-2026-03-29-001.md  architect-alpha-to-coordinator-debate-score-2026-03-28.md  architect-alpha-to-coordinator-round1-2026-03-29.md  architect-alpha-to-coordinator-round2-2026-03-29.md  architect-alpha-to-coordinator-round2-review-2026-03-28.md  architect-alpha-to-coordinator-round3-review-2026-03-28.md  architect-alpha-to-coordinator-round4-review-2026-03-28.md  architect-alpha-to-coordinator-round5-review-2026-03-28.md  architect-alpha-to-coordinator-round6-review-2026-03-28.md  architect-beta-to-coordinator-2026-03-29-001.md  architect-beta-to-coordinator-debate-score-2026-03-28.md  architect-beta-to-coordinator-round1-2026-03-29.md  architect-beta-to-coordinator-round2-2026-03-29.md  architect-beta-to-coordinator-round2-review-2026-03-28.md  architect-beta-to-coordinator-round3-review-2026-03-28.md  architect-beta-to-coordinator-round4-review-2026-03-28.md  architect-beta-to-coordinator-round5-review-2026-03-28.md  architect-beta-to-coordinator-round6-review-2026-03-28.md  architect-gamma-to-coordinator-2026-03-29-001.md  architect-gamma-to-coordinator-round1-2026-03-29.md  architect-gamma-to-coordinator-round2-2026-03-29.md  architect-gamma-to-coordinator-round2-review-2026-03-28.md  architect-gamma-to-coordinator-round3-review-2026-03-28.md  architect-gamma-to-coordinator-round4-review-2026-03-28.md  (+251 more)
tests/: conftest.py  test_cli.py  (+13 more)
(+418 files in other folders)
