[project]
name = "algo-studio"
version = "0.1.0"
description = "AI Algorithm Platform with Auto-Evolution"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "ray[default]>=2.9.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
]

[project.scripts]
algo = "algo_studio.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"