[project]
name = "algo-studio"
version = "0.1.0"
description = "AI Algorithm Platform with Auto-Evolution"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.27.0",
    "ray[default]>=2.9.0",
    "pydantic>=2.5.0",
    "click>=8.1.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "pyyaml>=6.0.0",
    "psutil>=5.9.0",
    "pynvml>=11.5.0",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "factory-boy>=3.3.0",
    "Faker>=22.0.0",
]

[project.scripts]
algo = "algo_studio.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src/algo_studio",
    "--cov-report=term-missing",
    "--cov-report=html:tests/reports/coverage-html",
    "--cov-report=xml:tests/reports/coverage.xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
    "ray: Tests requiring Ray cluster",
    "api: API endpoint tests",
    "scheduler: Scheduler algorithm tests",
    "ssh: SSH deployment tests",
    "e2e: End-to-end tests",
    "cluster: Cluster failure recovery tests",
    "web: Web console tests",
    "mock: Tests using mocks",
    "skip_ci: Tests that cannot run in CI environments",
]

[tool.coverage.run]
source = ["src/algo_studio"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "tests/reports/coverage-html"